--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -23,7 +23,9 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
 {% if useAutoStoreData %}
   {% block footer %}
+  
     {{ govukFooter({
+              rebrand: true,
       meta: {
         items: [
           {
